 * Changed project template to explicitly import development settings via `settings.dev` (Tomas Olander)
 * Improved L10N and I18N for revisions list (Roel Bruggink)
 * The multiple image uploader now displays details of server errors (Nigel Fletton)
 * Added `WAGTAIL_APPEND_SLASH` setting to determine whether page URLs end in a trailing slash (Andrew Tork Baker)
 * Fix: The currently selected day is now highlighted only in the correct month in date pickers (Jonas Lergell)
 * Fix: Fixed crash when an image without a source file was resized with the "dynamic serve view"
 * Fix: Registered settings admin menu items now show active correctly (Matthew Downey)
 * Fix: Direct usage of `Document` model replaced with `get_document_model` function in `wagtail.contrib.wagtailmedusa` and in `wagtail.contrib.wagtailapi`
 * Fix: Failures on sending moderation notification emails now produce a warning, rather than crashing the admin page outright (Matt Fozard)
 * Fix: All admin forms that could potentially include file upload fields now specify `multipart/form-data` where appropriate (Tim Heap)
 * Fix: REM units in Wagtailuserbar caused incorrect spacing (Vincent Audebert)
 * Fix: Explorer menu no longer scrolls with page content (Vincent Audebert)
 * Fix: Border added around explorer menu to stop it blending in with StreamField block listing (Alex Gleason)
 * Fix: `decorate_urlpatterns` now uses `functools.update_wrapper` to keep view names and docstrings (Mario César)


1.4.4 (xx.xx.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: The `wagtailuserbar` template tag now gracefully handles situations where the `request` object is not in the template context (Matt Westcott)
 * Fix: Meta classes on StreamField blocks now handle multiple inheritance correctly (Tim Heap)
 * Fix: Now user can upload images / documents only into permitted collection from choosers